# stt_server_test

./: README.md  api_server.py  app.py  consumer.py  pyproject.toml
